--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <main class="mdl-layout__content">
         <!-- Simple Textfield -->
-        <form action="#">   
+        <form action="#">
           <p>hours</p>
           <div class="mdl-textfield mdl-js-textfield">
             <input
@@ -66,10 +66,8 @@
           Calculate
         </button>
         <br />
-        <div id="pay">
-        </div>
-        <div id="tax">
-        </div>
+        <div id="pay"></div>
+        <div id="tax"></div>
       </main>
     </div>
   </body>
